# log-scouter

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  install.ps1  run.sh  uninstall.ps1  upgrade.ps1  upgrade.sh
.github/workflows/: release.yml
schemas/: Log4j2-Default.json  Spring-Boot-3.json  Spring-Boot.json  Tomcat-Access-Log.json  Tomcat-Catalina.json
scripts/: install-log-schema-claude-skill  install-log-schema-claude-skill.ps1  install-log-schema-codex-skill  install-log-schema-codex-skill.ps1  install.sh  uninstall.sh  upgrade.ps1  upgrade.sh
skills/log-schema/: SKILL.md  openai.yaml
src/: lib.rs  main.rs
src/ai/: config.rs  message.rs  mod.rs  provider.rs  skills.rs  tools.rs  worker.rs
src/core/: extractor.rs  filters.rs  hub.rs  library.rs  mod.rs  models.rs  parser.rs  project.rs  release.rs  search.rs
src/mcp/: mod.rs
src/tui/: mod.rs
tests/: ai.rs  bench_manual.rs  core.rs  mcp.rs
