[package]
name = "log-scouter"
version = "0.0.6"
edition = "2021"
description = "A keyboard-driven Rust TUI for browsing, filtering, extracting, and searching large server logs."
license = "MIT"

[[bin]]
name = "logscout"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# A tiny synchronous HTTP server for the MCP endpoint, so an external agent (Claude Code,
# Codex) can drive the app; getrandom mints the bearer token that guards it.
tiny_http = { version = "0.12", default-features = false }
getrandom = "0.2"

[dev-dependencies]
regex = "1"
tempfile = "3"
