[package]
name = "log-scouter"
version = "0.0.16"
edition = "2021"
description = "A keyboard-driven Rust TUI for browsing, filtering, extracting, and searching large server logs."
license = "MIT"

[[bin]]
name = "logscout"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
# `use-dev-tty`: read key events from /dev/tty so stdin can carry piped log data
# (`cmd | logscout -i`). Unix-only effect; a no-op on Windows.
crossterm = { version = "0.28", features = ["use-dev-tty"] }
ratatui = "0.29"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
tokio = { version = "1", features = ["rt", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
flate2 = "1.1.9"
tar = { version = "0.4.46", default-features = false }

[dev-dependencies]
regex = "1"
tempfile = "3"
